Fixed padding on mobile

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -556,26 +556,25 @@ img[src='./images/dna-icon-small.png'] {
 	}
 	.about-item-1 {
 		grid-area: 1 / 1 / 2 / 2;
-		padding: 1rem 1rem 1rem 1rem;
+		padding: 1rem 0rem 1rem 0rem;
 		background-color: hsla(0, 0%, 0%, 0);
 	}
 	.about-item-2 {
 		grid-area: 2 / 1 / 3 / 2;
 		background-color: hsla(0, 0%, 0%, 0);
-		padding: 0rem 1rem 0rem 1rem;
+		padding: 0rem;
 	}
 	.about-item-3 {
 		grid-area: 3 / 1 / 4 / 2;
 		background-color: hsla(0, 0%, 0%, 0);
-		padding: 0rem 1rem 0rem 1rem;
+		padding: 0rem;
 	}
 	.about-item-4 {
 		grid-area: 4 / 1 / 5 / 2;
 		text-align: center;
 		margin: 0rem;
-		padding: 2rem;
+		padding: 1rem 0rem 1rem 0rem;
 		background-color: hsla(0, 0%, 0%, 0);
-		padding: 0rem 1rem 0rem 1rem;
 	}
 	.writing-grid {
 		display: grid;
@@ -588,7 +587,7 @@ img[src='./images/dna-icon-small.png'] {
 	}
 	.writing-item-2 {
 		grid-area: 2 / 1 / 3 / 2;
-		padding: 0rem 1rem 0rem 1rem;
+		padding: 0rem;
 		background-color: hsla(0, 0%, 0%, 0);
 	}
 	.testimonials-grid {
@@ -602,7 +601,7 @@ img[src='./images/dna-icon-small.png'] {
 	}
 	.testimonials-item-2 {
 		grid-area: 2 / 1 / 3 / 2;
-		padding: 0rem 1rem 0rem 1rem;
+		padding: 0rem;
 		background-color: hsla(0, 0%, 0%, 0);
 	}
 	.nav-container label {
